# wycd.net

./: .gitignore  CNAME  LICENSE  blog.html  consulting.html  consulting.md  deploy.sh  index.html  now.html  now.md  projects.html  stack.yaml  wayne@wycd.net.pub  wycd.cabal
_site/: blog.html  consulting.html  index.html  now.html  projects.html
css/: default.css  syntax.css
posts/: 2014-07-02-logging-function-names-in-go.html  2014-07-02-logging-function-names-in-go.md  2014-07-10-a-simple-network-client-in-rust.html  2014-07-10-a-simple-network-client-in-rust.md  2015-01-04-gentoo-full-disk-encryption-lvm-on-luks.html  2015-01-04-gentoo-full-disk-encryption-lvm-on-luks.md  2015-03-10-creating-a-bootable-windows-10-usb-drive-on-linux.html  2015-03-10-creating-a-bootable-windows-10-usb-drive-on-linux.md  2017-01-09-disruptors-of-consulting.html  2017-01-09-disruptors-of-consulting.md  2017-01-11-pptpclients-use-of-fault-tree-analysis.html  2017-01-11-pptpclients-use-of-fault-tree-analysis.md  2017-01-17-resilience-in-complex-adaptive-systems.html  2017-01-17-resilience-in-complex-adaptive-systems.md  2017-01-19-fizz-buzz-and-triangles-in-j.html  2017-01-19-fizz-buzz-and-triangles-in-j.md  2017-02-04-salespeople-and-security-researchers.html  2017-02-04-salespeople-and-security-researchers.md  2017-02-06-gentoo-offline-package.install.html  2017-02-06-gentoo-offline-package.install.md  2017-02-21-ibm-whole-cluster-privilege-escalation-disclosure.html  2017-02-21-ibm-whole-cluster-privilege-escalation-disclosure.md  2017-04-02-working-with-machines.html  (+23 more)
src/: Main.hs
(+142 files in other folders)
