name:               wycd
version:            0.1.0.0
build-type:         Simple
Synopsis:           Personal website of Wayne Chang
Description:        Personal website of Wayne Chang
Homepage:           https://wycd.net
License:            AllRightsReserved
License-file:       LICENSE
Author:             Wayne Chang
Maintainer:         wyc@fastmail.fm
Copyright:          (C) 2016 Wayne Chang
Category:           Web
Build-type:         Simple
Extra-source-files: README
cabal-version:      >= 1.10

executable wycd
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , containers == 0.5.*
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
